<resources>
    <string name="app_name">Holdy</string>
    <string name="default_web_client_id">153800226619-ioqc3neu86pvlcs4qtbie6mr6ii1gk40.apps.googleusercontent.com</string>
    <color name="background_color1">#D6D6F8</color>
    <string name="volver">Volver</string>
    <string name="app_logo">Logo</string>
    <string name="correo">Correo electrónico</string>
    <string name="contraseña">Contraseña</string>
    <string name="toggle_password">Mostrar/ocultar contraseña</string>
    <string name="contrasena_ul">
        <u>contraseña</u>
    </string>
    <string name="login">L O G I N</string>
    <string name="si_no_eres_usuario">Si no eres usuario</string>
    <string name="registrate_ul">
        <u>regístrate</u>
    </string>
    <string name="login_normal">login</string>
    <string name="registrarte">C O N T I N U A R</string>
    <string name="ajustes">Ajustes</string>
    <string name="volvericon">Volver2</string>


    <string name="search">Buscar</string>
    <string name="back">Volver</string>
    <string name="google_maps_key">AIzaSyAlvMI41kmgtSeYyGareBpFU-lAE8HR0Xw</string>


</resources>